--- a/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
+++ b/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
@@ -10,5 +10,6 @@
   </ItemGroup>    
   <ItemGroup>
     <Folder Include="Schema\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 </Project>
