--- a/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
+++ b/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
@@ -11,5 +11,6 @@
   <ItemGroup>
     <Folder Include="Schema\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Attributes\" />
   </ItemGroup>
 </Project>
