--- a/src/MongoClient.Tests/MongoClient.Tests.csproj
+++ b/src/MongoClient.Tests/MongoClient.Tests.csproj
@@ -18,5 +18,6 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Helpers\" />
+    <Folder Include="Models\Schema\" />
   </ItemGroup>
 </Project>
