include Nautilus lib and mongo exception class

--- a/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
+++ b/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
@@ -12,5 +12,11 @@
     <Folder Include="Schema\" />
     <Folder Include="Extensions\" />
     <Folder Include="Attributes\" />
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Nautilus">
+      <HintPath>..\..\binaries\Nautilus.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
