--- a/src/MongoClient.Tests/MongoClient.Tests.csproj
+++ b/src/MongoClient.Tests/MongoClient.Tests.csproj
@@ -19,6 +19,7 @@
     <Folder Include="Models\" />
     <Folder Include="Helpers\" />
     <Folder Include="Models\Schema\" />
+    <Folder Include="Base\" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Nautilus">
