--- a/src/MongoClient.Tests/MongoClient.Tests.csproj
+++ b/src/MongoClient.Tests/MongoClient.Tests.csproj
@@ -1,46 +1,39 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.13.2" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Nautilus.Experiment.DataProvider.Mongo\Nautilus.Experiment.DataProvider.Mongo.csproj" />
-    <ProjectReference Include="..\..\..\nautilus-platform\nautilus\Nautilus.Tests.Core\Nautilus.Tests.Core.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Helpers\" />
-    <Folder Include="Models\Schema\" />
-    <Folder Include="Base\" />
-    <Folder Include="_config\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Nautilus">
-      <HintPath>..\..\binaries\Nautilus.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Remove="AppSettings\appsettings.Development.json" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="_config\appsettings.Development.json" Condition="'$(ExcludeConfigFilesFromBuildOutput)'=='true'">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="_config\appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="NUnit" Version="3.13.2" />
+		<PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Nautilus.Experiment.DataProvider.Mongo\Nautilus.Experiment.DataProvider.Mongo.csproj" />
+		<ProjectReference Include="..\..\..\nautilus-platform\nautilus\Nautilus.Tests.Core\Nautilus.Tests.Core.csproj" />
+		<ProjectReference Include="..\..\..\nautilus-platform\nautilus\Nautilus\Nautilus.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<Folder Include="Models\" />
+		<Folder Include="Helpers\" />
+		<Folder Include="Models\Schema\" />
+		<Folder Include="Base\" />
+		<Folder Include="_config\" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Remove="AppSettings\appsettings.Development.json" />
+	</ItemGroup>
+	<ItemGroup>
+		<Content Include="_config\appsettings.Development.json" Condition="'$(ExcludeConfigFilesFromBuildOutput)'=='true'">
+			<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+	<ItemGroup>
+		<None Update="_config\appsettings.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 </Project>
