--- a/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
+++ b/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
@@ -1,25 +1,23 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-
-    <IsPackable>false</IsPackable>
-    <RootNamespace>Nautilus.Experiment.DataProvider.Mongo</RootNamespace>
-  </PropertyGroup>
-  
-  <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="2.12.3" />
-  </ItemGroup>    
-  <ItemGroup>
-    <Folder Include="Schema\" />
-    <Folder Include="Extensions\" />
-    <Folder Include="Attributes\" />
-    <Folder Include="Exceptions\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Nautilus">
-      <HintPath>..\..\binaries\Nautilus.dll</HintPath>
-    </Reference>
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+		<IsPackable>false</IsPackable>
+		<RootNamespace>Nautilus.Experiment.DataProvider.Mongo</RootNamespace>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="MongoDB.Driver" Version="2.12.3" />
+	</ItemGroup>
+	<ItemGroup>
+		<Folder Include="Schema\" />
+		<Folder Include="Extensions\" />
+		<Folder Include="Attributes\" />
+		<Folder Include="Exceptions\" />
+		<Folder Include="Services\" />
+	</ItemGroup>
+	<ItemGroup>
+		<Reference Include="Nautilus">
+			<HintPath>..\..\binaries\Nautilus.dll</HintPath>
+		</Reference>
+	</ItemGroup>
 </Project>
