--- a/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
+++ b/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
@@ -19,5 +19,8 @@
 		<Reference Include="Nautilus">
 			<HintPath>..\..\binaries\Nautilus.dll</HintPath>
 		</Reference>
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\nautilus-platform\Nautilus\Nautilus.csproj" />
 	</ItemGroup>
 </Project>
