--- a/src/MongoClient.Tests/MongoClient.Tests.csproj
+++ b/src/MongoClient.Tests/MongoClient.Tests.csproj
@@ -10,11 +10,6 @@
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\Nautilus.Experiment.DataProvider.Mongo\Nautilus.Experiment.DataProvider.Mongo.csproj" />
-		<ProjectReference Include="..\..\nautilus-platform\Nautilus\Nautilus.csproj" />
-		<ProjectReference Include="..\..\nautilus-platform\Nautilus.Tests.Core\Nautilus.Tests.Core.csproj" />
-	</ItemGroup>
-	<ItemGroup>
 		<Folder Include="Models\" />
 		<Folder Include="Helpers\" />
 		<Folder Include="Models\Schema\" />
@@ -40,5 +35,9 @@
 		<None Update="_data\payload1.json">
 		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\nautilus-platform\nautilus\Nautilus.Tests.Core\Nautilus.Tests.Core.csproj" />
+	  <ProjectReference Include="..\Nautilus.Experiment.DataProvider.Mongo\Nautilus.Experiment.DataProvider.Mongo.csproj" />
 	</ItemGroup>
 </Project>
