--- a/src/MongoClient.Tests/MongoClient.Tests.csproj
+++ b/src/MongoClient.Tests/MongoClient.Tests.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 		<IsPackable>false</IsPackable>
+		<Copyright>FiftyOneLab Tech 2018-2021</Copyright>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="NUnit" Version="3.13.2" />
