--- a/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
+++ b/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
+		<Copyright>FiftyOneLab Tech 2018-2021</Copyright>
 		<IsPackable>false</IsPackable>
 		<RootNamespace>Nautilus.Experiment.DataProvider.Mongo</RootNamespace>
 	</PropertyGroup>
