--- a/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
+++ b/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<Copyright>FiftyOneLab Tech 2018-2021</Copyright>
 		<IsPackable>false</IsPackable>
 		<RootNamespace>Nautilus.Experiment.DataProvider.Mongo</RootNamespace>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="MongoDB.Driver" Version="2.13.1" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+		<PackageReference Include="MongoDB.Driver" Version="2.14.1" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="Schema\" />
@@ -18,6 +18,7 @@
 		<Folder Include="Services\" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\..\..\nautilus-platform\nautilus\Nautilus.Core\Nautilus.Core.csproj" />
+	  <ProjectReference Include="..\..\..\nautilus-platform\nautilus\Nautilus.Data\Nautilus.Data.csproj" />
+	  <ProjectReference Include="..\..\..\nautilus-platform\nautilus\Nautilus\Nautilus.csproj" />
 	</ItemGroup>
 </Project>
