--- a/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
+++ b/src/Nautilus.Experiment.DataProvider.Mongo/Nautilus.Experiment.DataProvider.Mongo.csproj
@@ -18,6 +18,6 @@
 		<Folder Include="Services\" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\..\..\nautilus-platform\nautilus\Nautilus.Core\Nautilus.Core.csproj" />
+	  <ProjectReference Include="..\..\..\..\nautilus\Nautilus.Core\Nautilus.Core.csproj" />
 	</ItemGroup>
 </Project>
